# python_automation_hw_16

./: pyproject.toml
